- Improved OSD scaling (OSD reacts now immediately to frame size changes)
- Replaced cIConv with VDR's cCharConv.
- Supports only for vdr-1.6.0 or later.
- Implemented build-time configuration script
- Fixed aspect ratio problems when using ffmpeg mpeg2 decoder
- H.264 updates
- Added support for .ass subtitles to media player (Thanks to zaverel)
- Added support for .smi subtitles to media player

2011-07-10: Version 1.0.7  (branch-1_0_x)
Backported bugfixes from CVS trunk:
- Accept short X11 display names (:0)
- Improved vdr server discovery when server is listening on all interfaces
Features:
- Updated Italian translations (Thanks to Diego Pierotto)
- Default to UDP transport. RTP is enabled only if requested on command line.
- Improved automatic BluRay subtitle selection
- React to X11 display size changes
- Do not show hidden files in media player file browser
- Added config entry to show hidden files in media player file browser
- Added --geometry and --window options to vdr plugin.
- Allow setting window position when starting in fullscreen mode.

2011-02-28: Version 1.0.6  (CVS branch-1_0_x for vdr.1.4.x and vdr-1.6.x)
Backported bugfixes from CVS trunk:
- Fixed VDR OSD when playing DVDs
- Fixed compilation with libextractor 0.6.0 (Thanks to Martin Knoll)
- Fixed blanking
- Fixed grab with jpeg7 and later
- Fixed segfault when grabbing
- Fixed unaligned access in swscale post plugin
- Fixed remote access thru NAT firewall
- Fixed OSD sending problems in remote mode
- Fixed handling of kBack in DVD player (Reported by Marco Skambracks)
- Fixed generating LIRC key release events (bug #2919256) (Thanks to Claudius Peschke)
- Fixed mixer volume being reset at vdr-sxfe start when using software volume control
  (Thanks to Juergen Lock)
- Fixed lot of compiler warnings (Thanks to Winfried Koehler)
- Reject clients when not primary device
- Do not lose the key pressed while displaying "Queued to playlist" message
  (Thanks to Marco Skambraks)